[gd_scene load_steps=6 format=3 uid="uid://h16clnbtmmui"]

[ext_resource type="Texture2D" uid="uid://baujyio84afba" path="res://assets/bg.png" id="1_d2l8j"]
[ext_resource type="Script" path="res://scenes/levlcontroller.gd" id="1_v3n5u"]
[ext_resource type="Theme" uid="uid://c87g1wfiyj8qq" path="res://tres/order_bubble.tres" id="3_rbvw1"]
[ext_resource type="AudioStream" uid="uid://k3b4htjgnv2l" path="res://assets/audio/music/cats_theme.mp3" id="4_g3dph"]
[ext_resource type="PackedScene" uid="uid://b7ic3ox7ery5" path="res://scenes/pause_menu.tscn" id="5_04juw"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_v3n5u")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(572, 321)
scale = Vector2(0.501302, 0.500772)
texture = ExtResource("1_d2l8j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 46.0
offset_right = 224.0
offset_bottom = 639.0

[node name="tutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_rbvw1")
theme_override_font_sizes/font_size = 56
text = "Tutorial"

[node name="lv1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_rbvw1")
theme_override_font_sizes/font_size = 56
text = "Level 1"

[node name="lv2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_rbvw1")
theme_override_font_sizes/font_size = 56
text = "Level 2"

[node name="lv3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_rbvw1")
theme_override_font_sizes/font_size = 56
text = "Level 3"

[node name="lv4" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_rbvw1")
theme_override_font_sizes/font_size = 56
text = "Level 4"

[node name="lv5" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_rbvw1")
theme_override_font_sizes/font_size = 56
text = "Time
Attack"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_g3dph")
autoplay = true

[node name="pauseMenu" parent="." instance=ExtResource("5_04juw")]
position = Vector2(745, 339)

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("3_rbvw1")
theme_override_font_sizes/font_size = 41
text = "Press escape to leave"

[connection signal="pressed" from="VBoxContainer/tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/lv1" to="." method="_on_lv_1_pressed"]
[connection signal="pressed" from="VBoxContainer/lv2" to="." method="_on_lv_2_pressed"]
[connection signal="pressed" from="VBoxContainer/lv3" to="." method="_on_lv_3_pressed"]
[connection signal="pressed" from="VBoxContainer/lv4" to="." method="_on_lv_4_pressed"]
[connection signal="pressed" from="VBoxContainer/lv5" to="." method="_on_lv_5_pressed"]
